<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="default_phone_number_gastropay_sdk" translatable="false">08503041083</string>
    <string name="default_email_gastropay_sdk" translatable="false">destek@gastroclub.com.tr</string>


    <!--region Bottom Navigation-->
    <string name="bottom_bar_merchants_gastropay_sdk">Restoranlar</string>
    <string name="bottom_bar_pay_gastropay_sdk">Ödeme Yap</string>
    <string name="bottom_bar_wallet_gastropay_sdk">Cüzdan</string>
    <!--endregion Bottom Navigation-->

    <!--region Login-->
    <string name="login_toolbar_title_gastropay_sdk">Giriş Yap</string>
    <string name="login_view_title_gastropay_sdk">Merhaba</string>
    <string name="login_view_desc_gastropay_sdk">Üyeliğinize giriş yapmak için sistemde kayıtlı cep telefonu numaranızı aşağıdaki alana giriniz.</string>
    <string name="login_view_phone_number_hint_gastropay_sdk">Cep Telefonunuz</string>
    <string name="login_view_button_gastropay_sdk">Onay Kodunu Gönder</string>
    <string name="otp_button_resend_gastropay_sdk">Tekrar Gönder</string>
    <!--endregion Login-->

    <!--region OTP-->
    <string name="otp_sms_label_gastropay_sdk">Lütfen %1$s numaralı cep telefonunuza SMS ile gelen onay kodunu girin.</string>
    <string name="otp_timer_label_gastropay_sdk">Kodu girmeniz için %1$s saniye kaldı!</string>
    <!--endregion OTP-->

    <!--region Merchants-->
    <string name="merchants_near_me_gastropay_sdk">Yakınımdakiler</string>
    <string name="merchants_merchant_distance_label_km_gastropay_sdk">%1$s KM YAKININDA</string>
    <string name="merchants_merchant_distance_label_mt_gastropay_sdk">%1$s M YAKININDA</string>
    <string name="merchants_warning_location_permission_title_gastropay_sdk">Lokasyon izni gerekli</string>
    <string name="merchants_warning_location_permission_description_gastropay_sdk">Yakınınızdaki Gastro restoranları görebilmeniz için lütfen lokasyon iznini kabul edin.</string>
    <string name="merchants_warning_no_restaurant_found_gastropay_sdk">Aradığınız konumda restoran bulunamadı.</string>
    <string name="merchants_restaurants_permission_dialog_button_text_gastropay_sdk">AYARLARA GİT</string>
    <!--endregion Merchants-->

    <!--region Merchant Detail-->
    <string name="merchant_detail_earn_gastropay_sdk">KAZAN</string>
    <string name="merchant_detail_spend_gastropay_sdk">HARCA</string>
    <string name="merchant_detail_value_degree_gastropay_sdk">PAHALILIK DERECESİ</string>
    <string name="merchant_detail_description_gastropay_sdk">AÇIKLAMA</string>
    <string name="merchant_detail_navigation_button_gastropay_sdk">YOL TARİFİ AL</string>
    <!--endregion Merchants-->

    <!--region Wallet-->
    <string name="wallet_last_transactions_gastropay_sdk">Son İşlemler</string>
    <string name="wallet_my_saved_points_gastropay_sdk">Biriken TL Puanlarım</string>
    <string name="wallet_point_gastropay_sdk">Puan</string>
    <string name="wallet_spend_gastropay_sdk">Harcama</string>
    <string name="wallet_earn_gastropay_sdk">Kazanım</string>
    <string name="wallet_cancel_gastropay_sdk">İptal</string>
    <string name="wallet_no_transactions">"Son yapılan işleminiz bulunmamaktadır"</string>
    <!--endregion Wallet-->

    <!--region QR-->
    <string name="qr_scan_qrcode_gastropay_sdk">Kare Kod Okut</string>
    <string name="qr_scan_popup_camera_permission_body_gastropay_sdk">"Bu özellik için gerekli kamera izni devre dışı! Ayarlardan izinlerinizi ayarlayabilirsiniz."</string>
    <string name="qr_scan_popup_camera_permission_action_button_gastropay_sdk">"AYARLARA GİT"</string>
    <string name="qr_scan_qrcode_reading_error">"QR Kod okuma işleminde bir sorun yaşandı. Lütfen tekrar deneyiniz."</string>
    <!--endregion QR-->

    <!--region Payment Confirmation-->
    <string name="payment_confirmation_navigation_title_gastropay_sdk">ÖDEME YAP</string>
    <string name="payment_confirmation_order_gastropay_sdk">Sipariş</string>
    <string name="payment_confirmation_amount_to_earn_gastropay_sdk">Kazanılan TL Puan</string>
    <string name="payment_confirmation_button_pay_gastropay_sdk">ÖDEME YAP</string>
    <string name="payment_confirmation_amount_payable_title_gastropay_sdk">ÖDENECEK TUTAR</string>
    <string name="payment_confirmation_spendable_amount_label_gastropay_sdk">Harcayabileceğiniz Bakiye</string>
    <string name="payment_confirmation_spended_amount_label_gastropay_sdk">Harcanan TL Puan</string>
    <string name="payment_confirmation_total_amount_gastropay_sdk">Ödenecek Tutar</string>
    <string name="payment_confirmation_spendable_amount_button_text_gastropay_sdk">HARCA</string>
    <string name="payment_confirmation_spendable_amount_button_cancel_text_gastropay_sdk">İPTAL</string>
    <string name="payment_confirmation_select_bank_card_label_gastropay_sdk">Kart Seçiniz</string>
    <string name="payment_confirmation_selected_bank_card_text_gastropay_sdk">Seçili Kart</string>
    <!--endregion Payment Confirmation-->

    <!--region Payment Result-->
    <string name="payment_success_contact_us_header_gastropay_sdk">GastroPay ile ödeme deneyiminiz nasıldı?</string>
    <string name="payment_success_contact_us_info_gastropay_sdk">Her türlü yorum, görüş ve öneri için bize ulaşabilirsiniz.</string>
    <string name="payment_success_button_contact_us_gastropay_sdk">BİZE ULAŞIN</string>
    <string name="payment_success_payment_success_label_gastropay_sdk">Ödemeniz Başarılı</string>
    <string name="payment_success_done_button_text_gastropay_sdk">BİTİR</string>
    <string name="payment_success_navigation_title_gastropay_sdk">ÖDEME BAŞARILI</string>
    <!--endregion Payment Result-->

    <!--region Search Merchant-->
    <string name="search_merchant_spinner_area_title_gastropay_sdk">"Konum"</string>
    <string name="search_merchant_spinner_city_gastropay_sdk">"Tüm İller"</string>
    <string name="search_merchant_spinner_region_gastropay_sdk">"Tüm Bölgeler"</string>
    <string name="search_merchant_button_filter_gastropay_sdk">"FİLTRELE"</string>
    <string name="search_merchant_button_clear_filter_gastropay_sdk">"FİLTRE TEMİZLE"</string>
    <string name="search_merchant_searchview_hint_text">"Restoran Ara"</string>
    <!--endregion QR-->

    <!--region Generic WebView-->
    <string name="generic_webview_cancel_gastropay_sdk">Vazgeç</string>
    <string name="generic_webview_ok_gastropay_sdk">Tamam</string>
    <!--endregion Payment Result-->

    <!--region Settings-->
    <string name="settings_navigation_title_gastropay_sdk">AYARLAR</string>
    <string name="settings_terms_of_use_gastropay_sdk">Kullanıcı Koşulları</string>
    <string name="settings_contact_permissions_gastropay_sdk">İletişim İzinleri</string>
    <string name="settings_faq_gastropay_sdk">Sıkça Sorulan Sorular</string>
    <string name="settings_contact_us_gastropay_sdk">Bize Ulaşın</string>
    <!--endregion Settings-->

    <!--region Wallet Detail-->
    <string name="transaction_detail_navigation_title_gastropay_sdk">İŞLEM DETAYI</string>
    <string name="transaction_detail_merchant_label_gastropay_sdk">Firma</string>
    <string name="transaction_detail_amount_label_gastropay_sdk">Tutar</string>
    <string name="transaction_detail_transaction_type_label_gastropay_sdk">İşlem Durumu</string>
    <string name="transaction_detail_date_label_gastropay_sdk">Tarih</string>
    <string name="transaction_detail_bill_label_gastropay_sdk">Fatura Numarası</string>
    <string name="transaction_detail_invoice_send_gastropay_sdk">Faturanız başarıyla gönderildi.</string>
    <!--endregion Settings-->

    <!--region ContactUs-->
    <string name="contact_us_title_gastropay_sdk">Bize Ulaşın</string>
    <string name="contact_us_call_gastropay_sdk">Bizi Arayın</string>
    <string name="contact_us_write_gastropay_sdk">Bize Yazın</string>
    <!--endregion ContactUs-->

    <!--region Notification Preferences-->
    <string name="settings_notification_toolbar_title_gastropay_sdk">Bildirim</string>
    <string name="settings_notification_channel_1_gastropay_sdk">Sms</string>
    <string name="settings_notification_channel_2_gastropay_sdk">E-posta</string>
    <!--endregion Notification Preferences-->
</resources>