<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/payButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/amountLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/celtic_gastropay_sdk"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/amountTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/payment_confirmation_amount_payable_title_gastropay_sdk"
                    android:textColor="@color/shamrock_gastropay_sdk"
                    android:textSize="@dimen/text_appearance_size_body_1_gastropay_sdk" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/amountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white_gastropay_sdk"
                    android:textSize="32sp"
                    tools:text="₺16,00" />
            </LinearLayout>

            <com.inventiv.gastropaysdk.view.YourSpendPointsView
                android:id="@+id/yourSpendPointsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <LinearLayout
                android:id="@+id/orderLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_gastropay_sdk"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/titleOrderTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/payment_confirmation_order_gastropay_sdk"
                        android:textColor="@color/celtic_gastropay_sdk"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/valueOrderTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/celtic_gastropay_sdk"
                        android:textSize="16sp"
                        tools:text="₺16,00" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/titleSpendPointTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/payment_confirmation_spended_amount_label_gastropay_sdk"
                        android:textColor="@color/celtic_gastropay_sdk"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/valueSpendPointTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/celtic_gastropay_sdk"
                        android:textSize="16sp"
                        tools:text="-" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/titleSumTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/payment_confirmation_total_amount_gastropay_sdk"
                        android:textColor="@color/celtic_gastropay_sdk"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/valueSumTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/celtic_gastropay_sdk"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="₺16,00" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/background_shadow_gastropay_sdk" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectCardTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/payment_confirmation_select_bank_card_label_gastropay_sdk"
                android:textColor="@color/celtic_gastropay_sdk"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cardsRecyclerViewGastroPaySdk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_bank_card_gastropay_sdk" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payButton"
        style="@style/Widget.Button.Yellow.GastroPaySdk"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/payment_confirmation_button_pay_gastropay_sdk"
        android:textAllCaps="true"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <include
        android:id="@+id/loading"
        layout="@layout/layout_loading_gastropay_sdk" />

</androidx.constraintlayout.widget.ConstraintLayout>